--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Developer Resume - Nuxt.js</title>
+<title>Thang Tran - Fullstack Developer</title>
 <style>body{background:#1a1a1a!important;color:#e6e6e6;font-family:Courier New,Courier,monospace;line-height:1.6;margin:0}.container{background:#252526;box-shadow:0 0 15px #00ffff1a;margin:0;padding:20px;width:100%}.sidebar{background:#1e1e1e;border-radius:8px 0 0 8px}.main,.sidebar{padding:20px}.profile-img{border:2px solid #0fc;border-radius:50%;display:block;height:100px;margin:0 auto 15px;width:100px}.typed-text{border-right:2px solid;display:inline-block;overflow:hidden;visibility:hidden;white-space:nowrap}.name{color:#0fc;font-size:24px;margin:0 0 20px;text-align:center;text-transform:uppercase}.section h2{border-bottom:1px dashed #3c3c3c;color:#569cd6;font-size:18px;margin-bottom:10px;padding-bottom:5px}.contact p,.education p,.experience-item h3,.experience-item p,.section p,.skills ul{color:#d4d4d4;font-size:14px;margin:5px 0}.skills ul{list-style:none;padding:0}.skills li{background:#3c3c3c;border-radius:4px;color:#fc0;display:inline-block;font-size:12px;margin:5px 0;padding:5px 10px}.experience-item h3{color:#9cdcfe;font-size:16px}.experience-item .date{color:#ce9178;font-size:12px}@keyframes typing{0%{width:0}to{width:100%}}@keyframes blink{0%,to{border-color:transparent}50%{border-color:inherit}}</style>
 <style>@charset "UTF-8";/*!
 * Bootstrap  v5.3.3 (https://getbootstrap.com/)
@@ -12,5 +12,5 @@
 <link rel="prefetch" as="script" crossorigin href="/assets/BM0sQ0Ev.js">
 <link rel="prefetch" as="script" crossorigin href="/assets/DBHc74Z6.js">
 <script type="module" src="/assets/CChVKBSt.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"Developer Resume - Nuxt.js"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1740486316805,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"b47f4d20-22b1-499e-837f-b16d79bf1b09",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
+<script id="unhead:payload" type="application/json">{"title":"Thang Tran - Fullstack Developer"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1740486912647,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"a76d7aa9-8162-40cd-a8fd-953256b13381",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
